analogue Change Log

Version 0.9-10

	* caterpillarPlot: can now be called by the shorter name
	caterpillar().

	* plot.logitreg: bug would cause plotting to fail if you plotted
	a single model.

Version 0.9-9

	* prcurve: added a print method.

	* Stratiplot: y-axis padded by 4% of range as per base graphics
	default behaviour.

	* plot.wa: don't rerun example(wa) just to plot.

	* caterpillarPlot: tolerance ranges for taxa drawn with lwd = 2.

Version 0.9-8

	* panel.Stratiplot: `type = "h"` now drawn using `lwd = 3` and with
	`lineend = "butt"`. The line width can be controled by new argument
	`lwd.h`.

Version 0.9-7

	* Stratiplot: In 0.9-5 a change was made to stop stripping NAs
	when using the formula interface. This means a way of dealing with
	NAs in the default plotting method is required especially when
	plotting using lines or poylgons, as Lattice will honour the NA
	and draw lines and polygons with gaps.

	Stratiplot.default gains argument `na.action` which defaults to
	`"na.omit"`. Note this is different to the formula method where
	we *want* NAs to propogate through to the default method for
	plotting.

	This change allows for datasets collected on different sediment
	intervals from the same core to be combined in a single diagram.

Version 0.9-6

	* caterpillarPlot: now no longer draws a box round the plot.

	Bug fixed so that the data.frame method correctly identies the
	`env` argument to label the plot with.

	Updated help file.

Version 0.9-5

	* Stratiplot: the formula interface was stripping rows with NAs.
	This wasn't intended but was the result of not implementing all
	of the standard non-standard evaluation idiom used by many of R's
	modelling functions.

	This is now fixed and the default for the `na.action` argument
	has been changed to `"na.pass"`.

	The default `Stratiplot()` method was working as expected.

	* Vignette: typo fixed (reported by Marta Rufio).

Version 0.9-4
